src/app/globals.css
@import "tailwindcss";

@custom-variant dark (&:where(.dark, .dark *));

.bouncing-loader > div {
  opacity: 0.5;
  animation: bouncing-loader 0.6s infinite alternate;
}

@keyframes bouncing-loader {
  to {
    opacity: 0.1;
    transform: translateY(-16px);
  }
}

.bouncing-loader > div:nth-child(2) {
  animation-delay: 0.2s;
}

.bouncing-loader > div:nth-child(3) {
  animation-delay: 0.4s;
}

.resume:hover {
  box-shadow: 5px 5px 0 0 #64ffda;
}

